fix(api): reemplazar localhost por dominio en frontend

--- a/html-web-project/src/catalog/catalog.html
+++ b/html-web-project/src/catalog/catalog.html
@@ -77,7 +77,7 @@
   
   <script>
   // --- Config sin import (evita errores de ESM si abres con file://) ---
-  const API_URL = "http://localhost:3001";
+  const API_URL = "https://ferreteriaexpress.shop/api";
 
   let carrito = [];
   let productosCache = [];
