--- a/html-web-project/src/index.html
+++ b/html-web-project/src/index.html
@@ -174,7 +174,7 @@
 
   <!-- Script para cargar productos -->
   <script>
-    fetch("http://localhost:3000/productos")
+    fetch("https://ferreteriaexpress.shop/api/productos")
       .then(response => response.json())
       .then(data => {
         let contenedor = document.getElementById("productos");
