--- a/html-web-project/src/cart/cart.html
+++ b/html-web-project/src/cart/cart.html
@@ -67,7 +67,7 @@
 
   <script>
     // ===== Config =====
-    const API_URL = "http://localhost:3000";
+    const API_URL = "https://ferreteriaexpress.shop/api";
 
     // ===== Storage =====
     function getCart() {
