--- a/html-web-project/src/orders/history.html
+++ b/html-web-project/src/orders/history.html
@@ -45,7 +45,7 @@
 
 <script>
   // === Config ===
-  const API_URL = "http://localhost:3000";
+  const API_URL = "https://ferreteriaexpress.shop/api";
   const TZ = "America/Bogota";
 
   // === Helpers de dinero/fecha ===
