--- a/html-web-project/src/user/login.html
+++ b/html-web-project/src/user/login.html
@@ -54,7 +54,7 @@
 
 
 <script>
-  const API_URL = "http://localhost:3000"; // cámbialo si usas Render
+  const API_URL = "https://ferreteriaexpress.shop/api"; // cámbialo si usas Render
 
   const form = document.getElementById("loginForm");
   const msg = document.getElementById("msg");
