--- a/html-web-project/src/user/login.html
+++ b/html-web-project/src/user/login.html
@@ -38,8 +38,8 @@
 <main>
   <h2>Iniciar Sesión</h2>
   <form id="loginForm" autocomplete="on">
-    <label for="correo">Correo</label>
-    <input type="email" id="correo" required autocomplete="email" />
+  <label for="identificador">Correo o Usuario</label>
+  <input type="text" id="identificador" required autocomplete="username" />
     <label for="password">Contraseña</label>
     <input type="password" id="password" required autocomplete="current-password" />
     <button type="submit">Iniciar sesión</button>
@@ -50,11 +50,19 @@
 <!-- Script de saludo/Logout que reutilizas en todas las páginas -->
 
 <script src="../assets/js/auth.js"></script>
+<!-- SweetAlert2 para mensajes bonitos de éxito/error -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
 
 <script>
-  const API_URL = "https://ferreteriaexpress.shop/api"; // cámbialo si usas Render
+  // URL fija de API en producción (se usa para obtener el origen)
+  const API_URL = 'https://ferreteriaexpress.shop/api';
+  // El backend monta /login en la raíz (sin /api), así que construimos LOGIN_URL desde el origin
+  const LOGIN_URL = (() => {
+    try { return new URL(API_URL).origin + '/login'; }
+    catch { return 'https://ferreteriaexpress.shop/login'; }
+  })();
 
   const form = document.getElementById("loginForm");
   const msg = document.getElementById("msg");
@@ -63,20 +71,26 @@
     e.preventDefault();
     msg.textContent = "";
 
-    const correo = document.getElementById("correo").value.trim();
+    const identifier = document.getElementById("identificador").value.trim();
     const password = document.getElementById("password").value;
 
+    if (!identifier || !password) {
+      Swal.fire({ icon: 'warning', title: 'Datos incompletos', text: 'Ingresa tu correo/usuario y contraseña.' });
+      return;
+    }
+
     try {
-      const res = await fetch(`${API_URL}/login`, {
+      const res = await fetch(LOGIN_URL, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ correo, password }),
+        body: JSON.stringify({ identifier, password }),
       });
 
       const data = await res.json();
 
       if (!res.ok) {
         msg.textContent = data.mensaje || "Error al iniciar sesión";
+        Swal.fire({ icon: 'error', title: 'No pudiste iniciar sesión', text: data.mensaje || 'Verifica tus datos.' });
         return;
       }
       localStorage.getItem("usuario")
@@ -84,14 +98,24 @@
 
       // Guarda al usuario y redirige al inicio
       localStorage.setItem("usuario", JSON.stringify(data.usuario));
-      // Si navegas por archivos / Live Server:
-      window.location.href = "../index.html";
-
-      // Si sirves todo con Express y /src expuesto:
-      // window.location.href = "/src/index.html";
+      const nombre = data.usuario?.nombre || '';
+      const correo = data.usuario?.correo || '';
+      Swal.fire({
+        icon: 'success',
+        title: 'Sesión iniciada',
+        html: `<p>Bienvenido${nombre ? `, <b>${nombre}</b>` : ''}.</p>${correo ? `<p><small>${correo}</small></p>` : ''}`,
+        confirmButtonText: 'Continuar',
+        confirmButtonColor: '#ff6600'
+      }).then(() => {
+        // Si navegas por archivos / Live Server:
+        window.location.href = "../index.html";
+        // Si sirves todo con Express y /src expuesto:
+        // window.location.href = "/src/index.html";
+      });
     } catch (error) {
       console.error(error);
       msg.textContent = "No se pudo conectar con el servidor.";
+      Swal.fire({ icon: 'error', title: 'Fallo de conexión', text: 'Inténtalo nuevamente más tarde.' });
     }
   });
 </script>
