feat(ui/profile): agregar sección Mi perfil y modal profesional de bienvenida
Navbar: añade link oculto Mi perfil controlado por auth.js (login, register, index, perfil). Modal SweetAlert2 de bienvenida con opciones (Mi perfil, Cerrar sesión, Seguir navegando).

Perfil: página rediseñada (profile.html) con tarjetas de datos, seguridad y futuras preferencias; protección si no hay sesión.

Auth: lógica para mostrar/ocultar link-profile y cambio de botón modal a 'Mi perfil'.

Refactor: se oculta el recuadro antiguo de sesión y se centraliza experiencia en modales.

Next: añadir endpoints cambio contraseña y pedidos recientes.

--- a/html-web-project/src/index.html
+++ b/html-web-project/src/index.html
@@ -138,6 +138,7 @@
         <!-- ✅ Elementos controlados por auth.js -->
         <li><a id="link-login" href="./user/login.html">Login</a></li>
         <li><a id="link-reg" href="./user/register.html">Registro</a></li>
+  <li><a id="link-profile" href="./user/profile.html" style="display:none">Mi perfil</a></li>
         <li><a id="link-logout" href="#" style="display:none">Cerrar sesión</a></li>
         <li><span id="saludo"></span></li>
 
@@ -192,6 +193,8 @@
       .catch(err => console.error("Error cargando productos:", err));
   </script>
 
+  <!-- SweetAlert2 para modales profesionales -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
   <!-- ✅ Script de autenticación -->
   <script src="./assets/js/auth.js" defer></script>
 
