--- a/html-web-project/src/user/login.html
+++ b/html-web-project/src/user/login.html
@@ -29,6 +29,7 @@
       <!-- Estos IDs los usa auth.js para mostrar/ocultar según sesión -->
       <li><a id="link-login" href="./login.html">Login</a></li>
       <li><a id="link-reg" href="./register.html">Registro</a></li>
+  <li><a id="link-profile" href="./profile.html" style="display:none">Mi perfil</a></li>
       <li><a id="link-logout" href="#" style="display:none">Cerrar sesión</a></li>
       <li><span id="saludo"></span></li>
     </ul>
