chore(env): remover fallback localhost y forzar dominio producción en rutas de productos
PUBLIC_URL default ahora apunta a https://ferreteriaexpress.shop. README actualizado para reflejar entorno productivo.

--- a/html-web-project/src/index.html
+++ b/html-web-project/src/index.html
@@ -195,8 +195,8 @@
 
   <!-- SweetAlert2 para modales profesionales -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
-  <!-- ✅ Script de autenticación -->
-  <script src="./assets/js/auth.js" defer></script>
+  <!-- ✅ Script de autenticación con cache busting -->
+  <script src="./assets/js/auth.js?v=20251110" defer></script>
 
 </body>
 </html>
