--- a/html-web-project/src/user/register.html
+++ b/html-web-project/src/user/register.html
@@ -165,7 +165,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script>
-    const API_BASE = 'https://ferreteriaexpress.shop';
+  const API_BASE = 'https://ferreteriaexpress.shop'; // versión JS 20251110
     const REGISTER_PRIMARY = API_BASE + '/api/register';
     const REGISTER_FALLBACK = API_BASE + '/register';
 
