--- a/html-web-project/src/user/profile.html
+++ b/html-web-project/src/user/profile.html
@@ -60,7 +60,7 @@
     </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="../assets/js/auth.js"></script>
+<script src="../assets/js/auth.js?v=20251110"></script>
 <script>
     function getUserSafe() {
         try { return JSON.parse(localStorage.getItem('usuario')||'null'); } catch { return null; }
