--- a/html-web-project/src/catalog/catalog.html
+++ b/html-web-project/src/catalog/catalog.html
@@ -61,7 +61,73 @@
     <h2 style="text-align:center; margin-top:20px;">Productos destacados</h2>
     <div id="productos" class="productos-grid"></div>
   </main>
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- jsPDF para generar factura en PDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
+    <script>
+    // Generador simple de PDF usando jsPDF (formato texto)
+    function generarFacturaPDF(venta, items) {
+      try {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF({ unit: 'pt', format: 'a4' });
+        let y = 40;
+        doc.setFontSize(16);
+        doc.text(`Factura N° ${venta.id}`, 40, y);
+        y += 24;
+        doc.setFontSize(12);
+        doc.text(`Total: $${Number(venta.total).toLocaleString()}`, 40, y);
+        y += 20;
+        doc.text('----------------------------------------', 40, y); y += 16;
+        items.forEach(it => {
+          const line = `${it.nombre} x${it.cantidad}  $${Number(it.precio_unitario || it.precio).toLocaleString()}  Sub: $${(Number(it.precio_unitario || it.precio) * Number(it.cantidad)).toLocaleString()}`;
+          const split = doc.splitTextToSize(line, 500);
+          doc.text(split, 40, y);
+          y += 14 * (split.length);
+          if (y > 750) { doc.addPage(); y = 40; }
+        });
+        doc.save(`factura_${venta.id}.pdf`);
+      } catch (e) {
+        console.error('Error generando PDF', e);
+        // fallback: abrir ventana de impresión
+        const w = window.open('', '_blank');
+        const rows = (items||[]).map(i => `<tr><td>${i.nombre}</td><td>${i.cantidad}</td><td style="text-align:right">$${Number(i.precio_unitario||i.precio).toLocaleString()}</td></tr>`).join('');
+        const html = `<!doctype html><html><head><meta charset="utf-8"><title>Factura N° ${venta.id}</title></head><body><h3>Factura N° ${venta.id}</h3><table>${rows}</table><p>Total: $${Number(venta.total).toLocaleString()}</p><script>setTimeout(()=>window.print(),300);</script></body></html>`;
+        w.document.write(html); w.document.close();
+      }
+    }
+
+      // Helper para mostrar la ventana de factura/venta
+      function mostrarFacturaModal(venta, items) {
+        const rows = items.map(i => `<tr><td>${i.nombre}</td><td style="text-align:center">${i.cantidad}</td><td style="text-align:right">$${Number(i.precio).toLocaleString()}</td><td style="text-align:right">$${(Number(i.precio)*Number(i.cantidad)).toLocaleString()}</td></tr>`).join('');
+        const html = `
+          <div style="text-align:left">
+            <p><b>N° venta:</b> ${venta.id}</p>
+            <table style="width:100%;border-collapse:collapse;margin-top:8px">
+              <thead><tr><th>Producto</th><th>Cant.</th><th style="text-align:right">Precio</th><th style="text-align:right">Subtotal</th></tr></thead>
+              <tbody>${rows}</tbody>
+              <tfoot><tr><td colspan="3" style="text-align:right"><b>Total</b></td><td style="text-align:right"><b>$${Number(venta.total).toLocaleString()}</b></td></tr></tfoot>
+            </table>
+          </div>`;
+
+        Swal.fire({
+          title: 'Pedido confirmado',
+          html,
+          width: 700,
+          showCloseButton: true,
+          showCancelButton: true,
+          confirmButtonText: 'Descargar factura',
+          cancelButtonText: 'Cerrar'
+        }).then((res) => {
+          if (res.isConfirmed) {
+            // preferimos generar PDF
+            generarFacturaPDF(venta, items.map(i => ({ nombre: i.nombre, cantidad: i.cantidad, precio_unitario: i.precio_unitario || i.precio })));
+          }
+        });
+      }
+
+  
   <!-- Carrito lateral -->
   <div id="carrito" class="carrito">
     <button class="btn-cerrar" onclick="toggleCarrito()">✖</button>
@@ -174,7 +240,7 @@
     const enCarrito = carrito.find(x => x.id === id)?.cantidad || 0;
     const disponible = Number(p.cantidad || 0);
     if (enCarrito + 1 > disponible) {
-      alert(`No hay suficiente stock de "${p.nombre}".`);
+      Swal.fire({ icon: 'warning', title: 'Stock insuficiente', text: `No hay suficiente stock de "${p.nombre}".` });
       return;
     }
 
@@ -206,7 +272,7 @@
   });
 
   async function finalizarDesdeCatalogo(){
-    if (!carrito.length){ alert("Tu carrito está vacío."); return; }
+    if (!carrito.length){ Swal.fire({ icon: 'info', title: 'Carrito vacío', text: 'Tu carrito está vacío.' }); return; }
 
     const user = JSON.parse(localStorage.getItem("usuario") || "null");
 
@@ -225,11 +291,12 @@
       const data = await r.json();
 
       if (!r.ok || !data.ok){
-        alert(data.mensaje || "No se pudo confirmar el pedido");
+        Swal.fire({ icon: 'error', title: 'Error', text: data.mensaje || "No se pudo confirmar el pedido" });
         return;
       }
 
-      alert(`Pedido confirmado. N° venta: ${data.venta.id} — Total: $${Number(data.venta.total).toLocaleString("es-CO")}`);
+  // Mostrar modal con factura/venta (preferir detalle del servidor si viene)
+  mostrarFacturaModal(data.venta, data.venta.items || carrito);
 
       carrito = [];
       actualizarCarrito();
@@ -239,7 +306,7 @@
 
     }catch(err){
       console.error(err);
-      alert("Error procesando el pedido.");
+      Swal.fire({ icon: 'error', title: 'Error', text: 'Error procesando el pedido.' });
     }
   }
 
