fix(catalog): close script tag before carrito markup

--- a/html-web-project/src/catalog/catalog.html
+++ b/html-web-project/src/catalog/catalog.html
@@ -126,8 +126,9 @@
           }
         });
       }
+    }
+  </script>
 
-  
   <!-- Carrito lateral -->
   <div id="carrito" class="carrito">
     <button class="btn-cerrar" onclick="toggleCarrito()">✖</button>
